テスト例を追加

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,6 +6,7 @@
   },
   "imports": {
     "@hectorm/otpauth": "jsr:@hectorm/otpauth@^9.3.1",
-    "@libs/qrcode": "jsr:@libs/qrcode@^1.2.2"
+    "@libs/qrcode": "jsr:@libs/qrcode@^1.2.2",
+    "@std/assert": "jsr:@std/assert@^0.226.0"
   }
 }
