--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,11 +1,12 @@
 {
   "tasks": {
-    "start": "deno run -A main.ts",
+    "start": "deno serve --port 8000 main.ts",
     "cache": "deno cache main.ts",
-    "debug": "deno run --watch --inspect -A main.ts"
+    "debug": "deno serve --port 8000 --watch --inspect -A main.ts"
   },
   "imports": {
     "@hectorm/otpauth": "jsr:@hectorm/otpauth@^9.3.1",
+    "@hono/hono": "jsr:@hono/hono@^4.4.6",
     "@libs/qrcode": "jsr:@libs/qrcode@^1.2.2",
     "@std/assert": "jsr:@std/assert@^0.226.0"
   }
