--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,20 +1,24 @@
-version: '3'
+### version指定は不要になった
+# version: '3'
 
+# name指定することで生成されるコンテナ名をある程度制御可能
+# {name指定内容}-{service名} の形式にできる
+name: projectname
 services:
   app:
-    build: 
+    build:
       context: .
       dockerfile: Dockerfile
 
     volumes:
       # Forwards the local Docker socket to the container.
-      - /var/run/docker.sock:/var/run/docker-host.sock 
+      - /var/run/docker.sock:/var/run/docker-host.sock
       # Update this to wherever you want VS Code to mount the folder of your project
       - ../..:/workspaces:cached
 
     # Overrides default command so things don't shut down after the process ends.
     entrypoint: /usr/local/share/docker-init.sh
-    command: sleep infinity 
+    command: sleep infinity
 
     # Uncomment the next four lines if you will use a ptrace-based debuggers like C++, Go, and Rust.
     # cap_add:
@@ -25,7 +29,7 @@ services:
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する ###
+    ### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する ###
 
   # 定義例
   # なお、noop イメージは起動したと同時に終了する
