moby採用に変更

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -14,8 +14,7 @@
 	"features": {
 		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
 			"version": "latest",
-			"enableNonRootDocker": "true",
-			"moby": "false"
+			"enableNonRootDocker": "true"
 		},
 		"ghcr.io/devcontainers-community/features/deno:1": {}
 	},
