--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -12,11 +12,10 @@
 	},
 
 	"features": {
-		"ghcr.io/devcontainers/features/docker-outside-of-docker:1": {
-			"version": "latest",
+		"ghcr.io/devcontainers/features/docker-outside-of-docker:latest": {
 			"enableNonRootDocker": "true"
 		},
-		"ghcr.io/devcontainers-community/features/deno:1": {}
+		"ghcr.io/devcontainers-community/features/deno:latest": {}
 	},
 	"customizations": {
 		"vscode": {
