--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,5 +12,11 @@
     "@hono/hono": "jsr:@hono/hono@^4.10.8",
     "@libs/qrcode": "jsr:@libs/qrcode@^3.0.1",
     "@std/assert": "jsr:@std/assert@^1.0.16"
+  },
+
+  // JSX を使うための設定
+  "compilerOptions": {
+    "jsx": "precompile",
+    "jsxImportSource": "@hono/hono/jsx"
   }
 }
