--- a/deno.jsonc
+++ b/deno.jsonc
@@ -9,7 +9,7 @@
   // 更新できるものがない場合は何も表示されない
   "imports": {
     "@hectorm/otpauth": "jsr:@hectorm/otpauth@^9.4.1",
-    "@hono/hono": "jsr:@hono/hono@^4.10.8",
+    "@hono": "jsr:@hono/hono@^4.10.8",
     "@libs/qrcode": "jsr:@libs/qrcode@^3.0.1",
     "@std/assert": "jsr:@std/assert@^1.0.16"
   },
@@ -17,6 +17,6 @@
   // JSX を使うための設定
   "compilerOptions": {
     "jsx": "precompile",
-    "jsxImportSource": "@hono/hono/jsx"
+    "jsxImportSource": "@hono/jsx"
   }
 }
