--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -5,7 +5,7 @@
 # {name指定内容}-{service名} の形式にできる
 name: projectname
 services:
-  app:
+  devcontainer:
     build:
       context: .
       dockerfile: Dockerfile
@@ -26,10 +26,10 @@ services:
     # security_opt:
     #   - seccomp:unconfined
 
-    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally. 
+    # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-    ### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する ###
+### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する ###
 
   # 定義例
   # なお、noop イメージは起動したと同時に終了する
