--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,6 +1,6 @@
 {
   "tasks": {
-    "start": "deno serve --port 8000 main.ts",
+    "start": "deno serve --port 8000 --host 0.0.0.0 main.ts",
     "cache": "deno cache main.ts",
     "debug": "deno serve --port 8000 --watch --inspect -A main.ts"
   },
