ARGの使い方誤り修正
- 各ビルドステージでも宣言が必要なのにしてなかったため、実質的に機能していなかった問題を修正
- UIDとGIDは違うだろうということで定数を追加

--- a/.docker/production/Dockerfile
+++ b/.docker/production/Dockerfile
@@ -1,13 +1,19 @@
 ### 本番環境用のDockerイメージを作成するためのDockerfile
 
-## 定数定義
+### 定数定義 ###
+## (各ステージで同名のARGを定義することで、この値を引き継ぐ)
 ARG DENO_VERSION=2.6.1
 ARG APP_DIR=/app
 ARG DENO_DIR=/deno-dir
 ARG NONROOT_UID=65532
+ARG NONROOT_GID=65532
 
 ### ビルドステージ ###
 FROM denoland/deno:debian-${DENO_VERSION} AS builder
+ARG APP_DIR
+ARG DENO_DIR
+ARG NONROOT_UID
+ARG NONROOT_GID
 
 # 作業ディレクトリを設定
 WORKDIR ${APP_DIR}
@@ -17,7 +23,7 @@ ENV DENO_DIR=${DENO_DIR}
 COPY . .
 RUN deno cache main.ts
 # 依存関係の所有権をnonrootに変更 (distroless には chown コマンドがないため)
-RUN chown -R ${NONROOT_UID}:${NONROOT_UID} ${DENO_DIR} ${APP_DIR}
+RUN chown -R ${NONROOT_UID}:${NONROOT_GID} ${DENO_DIR} ${APP_DIR}
 
 
 ### 本番環境ステージ ###
@@ -27,6 +33,8 @@ FROM denoland/deno:bin-${DENO_VERSION} AS bin
 ## 本番用イメージ(distroless)
 # nonrootを使用したいためgcr.ioのdistrolessイメージを使用
 FROM gcr.io/distroless/cc-debian13:nonroot AS production
+ARG APP_DIR
+ARG DENO_DIR
 
 # 作業ディレクトリを設定
 WORKDIR ${APP_DIR}
