--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,7 +12,8 @@
     "@hectorm/otpauth": "jsr:@hectorm/otpauth@^9.4.1",
     "@hono": "jsr:@hono/hono@^4.10.8",
     "@libs/qrcode": "jsr:@libs/qrcode@^3.0.1",
-    "@std/assert": "jsr:@std/assert@^1.0.16"
+    "@std/assert": "jsr:@std/assert@^1.0.16",
+    "@utils/": "./utils/"
   },
 
   // JSX を使うための設定
