--- a/.docker/production/compose.yaml
+++ b/.docker/production/compose.yaml
@@ -19,4 +19,5 @@ services:
 ### memo: 本Composeファイルで起動するコンテナへのアクセス方法(簡易確認用)
 # devcontainer ... curl http://host.docker.internal:8000
 # WSL2 ........... curl http://localhost:8000
-# ホストOS ....... なし
+# ホストOS(*1) ... curl http://localhost:8000
+# \*1: VSCode上のポート画面において、8000番のポートについての記載が何もなければ、これでアクセスできるはず
