--- a/deno.jsonc
+++ b/deno.jsonc
@@ -12,6 +12,7 @@
     // プロジェクト内のモジュールを参照するためのエイリアス
     "@utils/": "./utils/",
     "@api/": "./api/",
+    "@entrypoint": "./main.ts", // テストコードにおけるショートハンド用途
     // 以下、外部ライブラリ
     "@hectorm/otpauth": "jsr:@hectorm/otpauth@^9.4.1",
     "@hono": "jsr:@hono/hono@^4.11.1",
