--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,9 +1,9 @@
 {
   "tasks": {
     // ! start については、本番用のコンテナでも使用しているため、変更する場合は注意
-    "start": "deno serve --port 8000 --host 0.0.0.0 main.ts",
-    "cache": "deno cache main.ts",
-    "debug": "deno serve --port 8000 --watch --inspect -A main.ts"
+    "start": "OTEL_DENO=true deno serve --port 8000 --host 0.0.0.0 main.ts",
+    "debug": "OTEL_DENO=true deno serve --port 8000 --watch --inspect -A main.ts",
+    "cache": "deno cache main.ts"
   },
   // 最新版の確認
   // `deno outdated`
