--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -1,9 +1,10 @@
-### devcontainer 用の Docker Compose 定義ファイル ###
+##### devcontainer 用の Docker Compose 定義ファイル #####
 
 # name指定することで生成されるコンテナ名をある程度制御可能
 # {name指定内容}-{service名} の形式にできる
 name: projectname
 services:
+  ### devcontainer
   devcontainer:
     build:
       context: .
@@ -23,6 +24,18 @@ services:
     extra_hosts:
       - "host.docker.internal:host-gateway"
 
+    environment:
+      # ! 本番環境(AWSなりAzureなりGCPなり)にデプロイする際は、ENVが外部から設定できるはずなので
+      # ! 以下のキーに相当する環境変数を本番環境に設定しておくこと
+      ## Opentelemetry(lgtm)にトレースデータを送信するための設定
+      # see. https://opentelemetry.io/docs/specs/otel/protocol/exporter/
+      # 開発環境においてOpentelemetry(lgtm)はdevcontainerとは別のコンテナで動作している
+      # そのため、デフォルト設定のlocalhostではlgtmコンテナに送信されない
+      # compose 環境においては、サービス名でコンテナー間通信が可能なので lgtm と指定する
+      - OTEL_EXPORTER_OTLP_ENDPOINT=http://lgtm:4318
+      ## Opentelemetry(lgtm)に送信されるトレースデータに付与されるサービス名
+      - OTEL_SERVICE_NAME=projectname_service_in_devcontainer
+
     # Uncomment the next four lines if you will use a ptrace-based debuggers like C++, Go, and Rust.
     # cap_add:
     #  - SYS_PTRACE
@@ -32,15 +45,11 @@ services:
     # Use "forwardPorts" in **devcontainer.json** to forward an app port locally.
     # (Adding the "ports" property to this file will not forward from a Codespace.)
 
-### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する ###
+##### 開発用コンテナー以外に同時に起動したいコンテナはここより下で定義する #####
 
-  # 定義例
-  # なお、noop イメージは起動したと同時に終了する
-  noop:
-    image: eucm/noop
-
+  ### Opentelemetry + Grafana + Prometheus + Loki + Tempo + Pyroscope の統合観測基盤
   lgtm:
-    image: docker.io/grafana/otel-lgtm:0.8.1
+    image: docker.io/grafana/otel-lgtm:0.13.0
     container_name: lgtm
     ports:
       - "3000:3000"
