--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,8 +1,9 @@
 {
   "tasks": {
     // ! start については、本番用のコンテナでも使用しているため、変更する場合は注意
-    "start": "deno serve --port 8000 --host 0.0.0.0 main.ts",
-    "debug": "deno serve --port 8000 --watch --inspect -A main.ts",
+    // OTEL_DENO については、compose側で設定するとアプリケーションコード以外のなんかもトレースしてしまうため、ここで設定している
+    "start": "OTEL_DENO=true deno serve --port 8000 --host 0.0.0.0 main.ts",
+    "debug": "OTEL_DENO=true deno serve --port 8000 --watch --inspect -A main.ts",
     "cache": "deno cache main.ts"
   },
   // 最新版の確認
