span属性としてuidを設定するようにした
値自体は設定できているのだが、grafana loki側のフィルタリング項目として使用できていない。
そもそも値を設定する目的が前述のフィルタリングであるため、現状では目標が達成できていない。

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,6 +10,7 @@
   // `deno outdated`
   // 更新できるものがない場合は何も表示されない
   "imports": {
+    "@opentelemetry/api": "npm:@opentelemetry/api@^1.9.0",
     // プロジェクト内のモジュールを参照するためのエイリアス
     "@utils/": "./utils/",
     "@api/": "./api/",
