--- a/.docker/production/compose.yaml
+++ b/.docker/production/compose.yaml
@@ -12,12 +12,12 @@ services:
       dockerfile: .docker/production/Dockerfile
     image: honot:production
     ports:
-      - "8000:8000"
+      - "8008:8008"
     environment:
       - DENO_ENV=production
+      - HONO_SERVICE_PORT=8008 # 開発環境(devcontainer)で指定している番号とは異なる番号を指定
 
 ### memo: 本Composeファイルで起動するコンテナへのアクセス方法(簡易確認用)
-# devcontainer ... curl http://host.docker.internal:8000
-# WSL2 ........... curl http://localhost:8000
-# ホストOS(*1) ... curl http://localhost:8000
-# \*1: VSCode上のポート画面において、8000番のポートについての記載が何もなければ、これでアクセスできるはず
+# devcontainer ... curl http://host.docker.internal:8008
+# WSL2 ........... curl http://localhost:8008
+# ホストOS ....... curl http://localhost:8008
