--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -4,13 +4,13 @@
   "name": "Docker from Docker Compose",
   "dockerComposeFile": "compose.yaml",
   "service": "devcontainer", // compose.yaml内のサービス名を指定
+  // * コンテナ内で開くフォルダを指定
+  // ${localWorkspaceFolderBasename} はローカル(WLS上)のプロジェクトルートのふぉるだ名に置き換えられる
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
-
   // Use this environment variable if you need to bind mount your local source code into a new container.
-  "remoteEnv": {
-    "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
-  },
-
+  // "remoteEnv": {
+  //   "LOCAL_WORKSPACE_FOLDER": "${localWorkspaceFolder}"
+  // },
   // 開発環境に追加する機能を指定
   "features": {
     // WLS2上のDockerデーモンを使用可能にする
@@ -34,10 +34,8 @@
   }
   // Use 'forwardPorts' to make a list of ports inside the container available locally.
   // "forwardPorts": [],
-
   // Use 'postCreateCommand' to run commands after the container is created.
   // "postCreateCommand": "docker --version",
-
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
