zed用のテストタスクの追加
補足: vscodeの場合は(拡張機能に依るものなのか)自前でタスクを検出してくれるため、こういった個別の定義はしなくてもよくなっている

--- a/.zed/tasks.json
+++ b/.zed/tasks.json
@@ -38,5 +38,19 @@
     "shell": "system",
     "show_summary": true,
     "show_command": true
+  },
+
+  // deno.jsonc で特に定義してないテストタスク
+  {
+    "label": "Task(Deno) test",
+    "command": "deno test -A",
+    "use_new_terminal": false,
+    "allow_concurrent_runs": false,
+    "reveal": "always",
+    "reveal_target": "dock",
+    "hide": "never",
+    "shell": "system",
+    "show_summary": true,
+    "show_command": true
   }
 ]
