--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,9 +19,7 @@
       "moby": "false" // trixieはmoby未対応@2026-02-11 // https://github.com/apache/superset/issues/37180#issuecomment-3759792394
     },
     // Denoをインストール
-    "ghcr.io/devcontainers-community/features/deno:latest": {},
-    // jj(jujutsu)のインストール
-    "ghcr.io/eitsupi/devcontainer-features/jujutsu-cli:1": {}
+    "ghcr.io/devcontainers-community/features/deno:latest": {}
   },
   "customizations": {
     "vscode": {
