--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,8 +5,10 @@ FROM mcr.microsoft.com/devcontainers/base:trixie
 ENV TZ=Asia/Tokyo
 RUN ln -sf /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
 
-### ! devcontainer の features で解消できない場合に限り、apt install を使うこと
-# see. https://containers.dev/features/
-# apt-get そのものの例:
-# RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-#     && apt-get -y install --no-install-recommends <your-package-list-here>
+##### devcontainer 環境下における `apt install` について #####
+# 0.  dockerfile内では基本的に行わないこと
+#
+# 1.  言語の実行環境整備などは、features による解決を優先すること
+#       see. https://containers.dev/features/
+#
+# 2.  features で解決できない場合は `./devcontainer/postCreateCommand.sh` で行うこと
